--- a/app/app.css
+++ b/app/app.css
@@ -4,3 +4,21 @@
 .btn {
     font-size: 18;
 }
+
+.picker {
+    width: 200;
+    height: 75;
+    vertical-align: middle;
+}
+
+.i-profile {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;    
+    margin-top: -30px;
+}
+
+.i-background {
+    width: 100%;
+    height: 100px;
+}
