--- a/app/item/items.component.html
+++ b/app/item/items.component.html
@@ -31,14 +31,37 @@
         </GridLayout>
     </TabContentItem>
     <TabContentItem>
-        <GridLayout>
             <Label text="Account Page" class="h2 text-center"></Label>
-        </GridLayout>
+            <StackLayout padding="2 0 2 2" backgroundColor="darkGray" margin="0">
+                <Button text="My Likes" tap="myLikes"></Button>
+                <Button text="Find My Style" tap="findMyStyle"></Button>
+                <Button text="Latest and Greatest" tap="Latest"></Button>
+
+                <Button text="Edit Account Details" tap="editAccount"></Button>
+            </StackLayout>
+
     </TabContentItem>
     <TabContentItem>
-        <GridLayout>
+        <StackLayout>
             <Label text="Search Page" class="h2 text-center"></Label>
-        </GridLayout>
+            <SearchBar hint="Enter search term here ..."
+            [text]="searchPhrase" (textChange)="onTextChanged($event)" 
+            (clear)="onClear($event)" (submit)="onSubmit($event)">
+            </SearchBar>
+            <ListPicker [items]="categories" class="picker" (selectedIndexChange)="categoryPicker($event.object.selectedIndex)"></ListPicker>
+            <GridLayout padding="2 0 2 2" backgroundColor="lightGray" margin="0">
+                <RadListView row="0" orientation="vertical" [items]="items"
+                width="100%" height="100%" (scrolled)="scrollStartedEvent($event)">
+                    <ListViewGridLayout tkListViewLayout scrollDirection="Vertical" ios:itemWidth="186" ios:itemHeight="180"></ListViewGridLayout>
+                    <ng-template let-item="item" let-index="index">
+                        <StackLayout [nsRouterLink]="index" padding="0 2 2 0">
+                            <Image [src]="item.img[0]" height="180" ios:stretch="aspectFill"></Image>
+                        </StackLayout>
+                    </ng-template>
+                </RadListView>
+            </GridLayout>
+
+        </StackLayout>
     </TabContentItem>
 
 </BottomNavigation>
