--- a/app/item/items.component.html
+++ b/app/item/items.component.html
@@ -21,9 +21,15 @@
 
     <!-- The number of TabContentItem components should corespond to the number of TabStripItem components -->
     <TabContentItem>
-        <GridLayout padding="2 0 2 2" backgroundColor="lightGray" margin="0">
+        <StackLayout padding="2 0 2 2" backgroundColor="lightGray" margin="0">
+            <SearchBar class="searchMenu" hint="Enter search term here ..." (textChange)="onTextChanged($event)"
+            [text]="searchPhrase" (clear)="onClear($event)" (submit)="onSubmit($event)">
+            </SearchBar>
+            <ListPicker class="picker"
+            [items]="categories" (selectedIndexChange)="categoryPicker($event)">
+            </ListPicker>
             <RadListView row="0" orientation="vertical" [items]="items"
-            width="100%" height="100%">
+            width="100%" height="100%" (scrolled)="scrollStartedEvent($event)">
                 <ListViewGridLayout tkListViewLayout scrollDirection="Vertical" ios:itemWidth="186" ios:itemHeight="180"></ListViewGridLayout>
                 <ng-template let-item="item" let-index="index">
                     <StackLayout [nsRouterLink]="index" padding="0 2 2 0">
@@ -31,7 +37,7 @@
                     </StackLayout>
                 </ng-template>
             </RadListView>
-        </GridLayout>
+        </StackLayout>
     </TabContentItem>
     <TabContentItem>
             <Label text="Account Page" class="h2 text-center"></Label>
@@ -46,13 +52,7 @@
     </TabContentItem>
     <TabContentItem>
         <StackLayout>
-            <Label text="Search Page" class="h2 text-center"></Label>
-            <SearchBar hint="Enter search term here ..." (textChange)="onTextChanged($event)"
-            [text]="searchPhrase" (clear)="onClear($event)" (submit)="onSubmit($event)">
-            </SearchBar>
-            <ListPicker class="picker"
-            [items]="categories" (selectedIndexChange)="categoryPicker($event.object.selectedIndex)">
-            </ListPicker>
+            
             <GridLayout padding="2 0 2 2" backgroundColor="lightGray" margin="0">
                 <RadListView row="0" orientation="vertical" [items]="items"
                 width="100%" height="100%" (scrolled)="scrollStartedEvent($event)">
@@ -67,6 +67,5 @@
 
         </StackLayout>
     </TabContentItem>
-
 </BottomNavigation>
 
