--- a/app/item/items.component.html
+++ b/app/item/items.component.html
@@ -2,7 +2,7 @@
     <ActionItem tap="onShare" ios.systemIcon="9" ios.position="left" android.systemIcon="res://ic_menu_share" android.position="actionBar"></ActionItem>
     <ActionItem (tap)="onSearch($event)" ios.systemIcon="12" ios.position="right" text="search" android.position="popup"></ActionItem>
 </ActionBar>
-<BottomNavigation selectedIndex="1">
+<BottomNavigation selectedIndex="0">
     <!-- The bottom tab UI is created via TabStrip (the containier) and TabStripItem (for each tab)-->
     <TabStrip>
         <TabStripItem>
@@ -21,7 +21,7 @@
 
     <!-- The number of TabContentItem components should corespond to the number of TabStripItem components -->
     <TabContentItem>
-        <StackLayout padding="2 0 2 2" backgroundColor="lightGray" margin="0">
+        <StackLayout padding="2 0 2 2" backgroundColor="gray" margin="0">
             <SearchBar class="searchMenu" hint="Enter search term here ..." (textChange)="onTextChanged($event)"
             [text]="searchPhrase" (clear)="onClear($event)" (submit)="onSubmit($event)">
             </SearchBar>
@@ -52,19 +52,7 @@
     </TabContentItem>
     <TabContentItem>
         <StackLayout>
-            
-            <GridLayout padding="2 0 2 2" backgroundColor="lightGray" margin="0">
-                <RadListView row="0" orientation="vertical" [items]="items"
-                width="100%" height="100%" (scrolled)="scrollStartedEvent($event)">
-                    <ListViewGridLayout tkListViewLayout scrollDirection="Vertical" ios:itemWidth="186" ios:itemHeight="180"></ListViewGridLayout>
-                    <ng-template let-item="item" let-index="index">
-                        <StackLayout [nsRouterLink]="index" padding="0 2 2 0">
-                            <Image [src]="item.img[0]" height="180" ios:stretch="aspectFill"></Image>
-                        </StackLayout>
-                    </ng-template>
-                </RadListView>
-            </GridLayout>
-
+            <Label>Nothing here yet...</Label>
         </StackLayout>
     </TabContentItem>
 </BottomNavigation>
