--- a/app/item/items.component.html
+++ b/app/item/items.component.html
@@ -29,7 +29,7 @@
             [items]="categories" (selectedIndexChange)="categoryPicker($event)">
             </ListPicker>
             <RadListView row="0" orientation="vertical" [items]="itemsShown"
-            width="100%" height="100%" (scrolled)="scrollStartedEvent($event)" loadOnDemandMode="Auto" (loadMoreDataRequested)="onLoadMoreItemsRequested($event)">
+            width="100%" height="100%" (scrolled)="scrollStartedEvent($event)" loadOnDemandMode="Auto" (loadMoreDataRequested)="onLoadMoreItemsRequested($event)" loadOnDemandBufferSize="2">
                 <ListViewGridLayout tkListViewLayout scrollDirection="Vertical" ios:itemWidth="186" ios:itemHeight="180"></ListViewGridLayout>
                 <ng-template let-item="item" let-index="index">
                     <StackLayout [nsRouterLink]="index" padding="0 2 2 0">
