--- a/app/app.css
+++ b/app/app.css
@@ -40,3 +40,12 @@ Button {
     width: 100%;
     height: 100px;
 }
+
+.fa {
+    font-family: FontAwesome;
+  }
+
+  .fas {
+    font-family: Font Awesome 5 Free, fa-solid-900;
+    font-weight: 900; 
+}
