Like/Dislike Button functionality, swiping for like/dislike on drag distance

--- a/app/item/item-detail.component.html
+++ b/app/item/item-detail.component.html
@@ -1,4 +1,12 @@
-<ActionBar title="Details"></ActionBar>
+<ActionBar title="Details" (loaded)="actionBarLoaded($event)">
+    <ActionItem (tap)="onItemLike($event)" ios.position="right" text="search" android.position="popup">
+        <Image (loaded)="checkLikeActive($event)" src = "font://&#xf004;" class="{{liked ? 'fas t-36 active' : 'far t-36 inactive'}}"></Image>    
+    </ActionItem>
+    <!--<ActionItem ios.position="right" text="/" ></ActionItem>-->
+    <ActionItem (tap)="onItemDislike($event)" ios.position="right" text="search" android.position="popup">
+        <Image (loaded)="checkDislikeActive($event)" src = "font://&#xf165;" class="{{disliked ? 'fas t-36 active' : 'far t-36 inactive'}}"></Image>
+    </ActionItem>
+</ActionBar>
 
 <FlexboxLayout flexDirection="column">
     <FlexboxLayout class="m-15" flexDirection="column" flexWrap="wrap" flexDirection="row">
