--- a/app/app.css
+++ b/app/app.css
@@ -45,7 +45,20 @@ Button {
     font-family: FontAwesome;
   }
 
-  .fas {
+.fas {
     font-family: Font Awesome 5 Free, fa-solid-900;
     font-weight: 900; 
+}
+
+.far {
+    font-family: Font Awesome 5 Free, fa-regular-400;
+    font-weight: 400; 
+}
+
+.active {
+    color: red;
+}
+
+.inactive {
+    color: white;
 }
