like and dislike functionality on main scroll

--- a/app/item/item-detail.component.html
+++ b/app/item/item-detail.component.html
@@ -1,10 +1,10 @@
 <ActionBar title="Details">
     <ActionItem (tap)="onItemLike($event)" ios.position="right" text="search" android.position="popup">
-        <Image (loaded)="checkLikeActive($event)" src = "font://&#xf004;" class="{{liked ? 'fas t-36 active' : 'far t-36 inactive'}}"></Image>    
+        <Label text = "&#xf004;" [class]="liked ? 'fas t-36' : 'far t-36'"></Label>    
     </ActionItem>
-    <!--<ActionItem ios.position="right" text="/" ></ActionItem>-->
+    <ActionItem ios.position="right" text="/" ></ActionItem>
     <ActionItem (tap)="onItemDislike($event)" ios.position="right" text="search" android.position="popup">
-        <Image (loaded)="checkDislikeActive($event)" src = "font://&#xf165;" class="{{disliked ? 'fas t-36 active' : 'far t-36 inactive'}}"></Image>
+        <Label text = "&#xf165;" [class]="disliked ? 'fas t-36' : 'far t-36'"></Label>
     </ActionItem>
 </ActionBar>
 
