--- a/app/app.css
+++ b/app/app.css
@@ -17,6 +17,10 @@ Button {
     background-image: linear-gradient(to top, #a18cd1 0%, #fbc2eb 100%);
 }
 
+.TileBackground {
+    background-image: linear-gradient(to right, red 0%, green 100%);
+}
+
 .picker {
     width: 200;
     height: 75;
