fixed broken nsRouterLink on purchase button

--- a/app/item/item-detail.component.html
+++ b/app/item/item-detail.component.html
@@ -25,6 +25,6 @@
             <Label [text]="item.name" class="listing-left" textAlignment="left" textWrap="true"></Label>
             <Label [text]="'$' + item.price" class="listing-right" textAlignment="center" textWrap="true"></Label>
         </StackLayout>
-        <Button text="Buy This Product" width="100%" margin="10 0 10 0" backgroundColor="blue" height="100px" [nsRouterLink]="['detail', index]"></Button>
+        <Button text="Buy This Product" width="100%" margin="10 0 10 0" backgroundColor="blue" height="100px" [nsRouterLink]="index"></Button>
     </FlexboxLayout>
 </FlexboxLayout>
