restructuring, bug fixes, optimizations

--- a/app/item/items.component.html
+++ b/app/item/items.component.html
@@ -1,4 +1,4 @@
-<ActionBar title="Explore Items" (loaded)="loadUserData()">
+<ActionBar title="Explore Items">
     <ActionItem tap="onShare" ios.systemIcon="9" ios.position="left" android.systemIcon="res://ic_menu_share" android.position="actionBar"></ActionItem>
     <ActionItem (tap)="onSearch($event)" ios.systemIcon="12" ios.position="right" text="search" android.position="popup"></ActionItem>
 </ActionBar>
