added outfit picker to routes

--- a/app/item/items.component.html
+++ b/app/item/items.component.html
@@ -9,7 +9,7 @@
             <Label text="Home"></Label>
             <Image src="font://&#xf015;" class="fas t-36"></Image>
         </TabStripItem>
-        <TabStripItem class="special">
+        <TabStripItem class="special" [nsRouterLink]="'outfit'">
             <Label text="Account"></Label>
             <Image src="font://&#xf007;" class="fas t-36"></Image>
         </TabStripItem>
